--- a/include/aside.html
+++ b/include/aside.html
@@ -6,7 +6,7 @@
 			<li><a href="/sub1_2.html">fadeIn, fadeOut 배너</a></li>
 			<li><a href="/sub1_3.html">폰트 적용하기</a></li>
 			<li><a href="/sub1_4.html">말줄임 표시 만들기</a></li>
-			<li><a href="/sub1_5.html">모바일 &lt;meta&gt;</a></li>
+			<li><a href="/sub1_5.html">모바일</a></li>
 			<li><a href="#"></a></li>
 		</ul>
 	</li>
