--- a/include/aside.html
+++ b/include/aside.html
@@ -48,7 +48,7 @@
 		</ul>
 	</li>
 	<li>
-		<span>5. web design</span>
+		<span>5. Web design</span>
 		<ul class="depth2">
 			<li><a href="#"></a></li>
 			<li><a href="#"></a></li>
