--- a/include/aside.html
+++ b/include/aside.html
@@ -7,7 +7,7 @@
 			<li><a href="/sub1_3.html">폰트 적용하기</a></li>
 			<li><a href="/sub1_4.html">말줄임 표시 만들기</a></li>
 			<li><a href="/sub1_5.html">모바일 코딩</a></li>
-			<li><a href="/eub1_6.html">CSS reset</a></li>
+			<li><a href="/sub1_6.html">CSS reset</a></li>
 		</ul>
 	</li>
 	<li>
