--- a/include/aside.html
+++ b/include/aside.html
@@ -8,7 +8,7 @@
 			<li><a href="/sub1_4.html">말줄임 표시 만들기</a></li>
 			<li><a href="/sub1_5.html">모바일 코딩</a></li>
 			<li><a href="/sub1_6.html">CSS reset</a></li>
-			<li><a href="/sub1_7.html">youtube iframe</a></li>
+			<li><a href="/sub1_7.html">Youtube iframe</a></li>
 		</ul>
 	</li>
 	<li>
