--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,8 @@ body{overflow-y: scroll;}
 #header h1{float: left; font-weight: 500;font-size: 2.2rem;line-height: 60px;}
 #header span{display: none; float: left; margin-left: 32px; font-size: 2.4rem; line-height: 60px; cursor: pointer;}
 
-.aside_wrap{position: fixed; top: 61px;left: 50%;margin-left: -600px;height: 100%;width: 261px;}
-#aside{position: absolute; overflow-y: auto;width: 260px;height: calc(100vh - 61px);font-weight: 500;font-size: 1.6rem;line-height: 2.4rem;border-right: 1px solid #ddd;}
+.aside_wrap{position: fixed; top: 61px;left: 50%;margin-left: -600px;height: 100%;width: 261px; z-index: 30;}
+#aside{position: absolute; overflow-y: auto;width: 260px;height: calc(100vh - 61px);border-right: 1px solid #ddd;font-weight: 500;font-size: 1.6rem;line-height: 2.4rem; background-color: #fff;}
 #aside .depth1 > li{margin: 16px 0;}
 #aside .depth2{margin-left: 16px; font-weight: 400;}
 #aside .depth2 a{color: #666;}
@@ -53,8 +53,7 @@ body{overflow-y: scroll;}
     #header{width: auto;left: 0;right:0;bottom: 0;margin-left: 0;}
     #header h1{margin-left: 0;font-size: 2.75rem;}
     #header span{display: block;margin-left: 0;padding: 0 16px;}
-    .aside_wrap{display: none;}
-    .aside_wrap.on{width: 100%;background-color: rgba(0,0,0,0.5);z-index: 30;}
+    .aside_wrap{display: none; width: 100%;background-color: rgba(0,0,0,0.5);z-index: 30;}
     #aside.on{overflow-y: auto;display: block;position: absolute;top: 0;left: 0;margin-top: 0;width: 250px;font-size: 2rem;line-height: 3.2rem;background: #fff;z-index: 10;}
     #content{width: calc(100% - 64px);margin-left: 0;left: 0;}
 }
