--- a/css/reset.css
+++ b/css/reset.css
@@ -3,7 +3,7 @@
 
 /*
 	파일생성일 2020-03-30
-	파일수정일 2020-04-14
+	파일수정일 2020-05-25
 	작성자: 한현진
 */
 
@@ -13,7 +13,8 @@
 	다음	http://darum.daum.net/convention/css/css_convention
 */
 
-html {font-family: 'Noto Sans KR', serif; font-size:10px;/* rem 사용*/} 
+*{-webkit-text-size-adjust: none;}
+html {font-family: 'Noto Sans KR', serif; font-size:10px; font-weight: 400;} 
 body {min-height: 800px;}
 body, div, h1, h2, h3, h4, h5, h6, p, pre, code, form, fieldset,legend, textarea, blockquote, th, td, input, select, textarea, button,dl,dt,dd {margin: 0; padding: 0;}
 header, nav, section, article, aside, footer{display: block; margin: 0; padding: 0;}
@@ -23,3 +24,4 @@ table {table-layout: fixed; border-collapse: collapse; border-spacing: 0;}
 a:link, a:visited, a:hover, a:active {text-decoration: none;}
 h1, h2, h3, h4, h5, h6, p, a, li, ul, ol, small, span, em, i, b, strong, input{color: #222;}
 u, s{text-decoration: none;}
+input, button{border: none;background-color: transparent;}
