--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,9 @@ body{overflow-y: scroll;}
 #content h2{font-weight: 500;font-size: 3.2rem;text-align: center;}
 #content h2::after{content:""; display: block; margin: 16px auto 20px; width: 5px; height: 30px; background-image: linear-gradient(to top, #4481eb 0%, #04befe 100%); ; transform: rotate(45deg);}
 #content h3{margin: 24px 0 8px;padding-bottom: 8px;border-bottom: 1px solid #ddd;font-weight: 500;font-size: 2.2rem;}
-#content p, #content strong{font-weight: 400;font-size: 1.8rem;line-height: 2.8rem;word-break: keep-all;}
+#content h4{padding-top: 18px; font-weight: 500; font-size: 1.8rem;}
+#content h3 + h4{padding: 0;}
+#content p, #content strong{font-weight: 400;font-size: 1.6rem;line-height: 2.8rem;word-break: keep-all;}
 #content strong{font-weight: 500;}
 #content p a{position: relative;box-shadow: inset 0 -6px 0 #ddd; transition: all 0.3s ease;}
 #content p a:hover{box-shadow: inset 0 -24px 0 #4481eb;}
