--- a/include/aside.html
+++ b/include/aside.html
@@ -3,19 +3,20 @@
 		<span>1. HTML, CSS</span>
 		<ul class="depth2">
 			<li><a href="/sub1_1.html">마크업 개발 레벨 테스트</a></li>
-			<li><a href="/sub1_2.html">fadeIn, fadeOut 배너</a></li>
+			<li><a href="/sub1_6.html">CSS reset</a></li>
+			<li><a href="/sub1_5.html">모바일 코딩</a></li>
 			<li><a href="/sub1_3.html">폰트 적용하기</a></li>
 			<li><a href="/sub1_4.html">말줄임 표시 만들기</a></li>
-			<li><a href="/sub1_5.html">모바일 코딩</a></li>
-			<li><a href="/sub1_6.html">CSS reset</a></li>
+			<li><a href="/sub1_2.html">fadeIn, fadeOut 배너</a></li>
 			<li><a href="/sub1_7.html">Youtube iframe</a></li>
 		</ul>
 	</li>
 	<li>
 		<span>2. JQuery</span>
 		<ul class="depth2">
-			<li><a href="/sub2_1.html">tabmenu</a></li>
 			<li><a href="/sub2_2.html">include</a></li>
+			<li><a href="/sub2_1.html">tabmenu</a></li>
+			<li><a href="/sub2_6.html">submenu</a></li>
 			<li><a href="/sub2_3.html">PlugIn: slick</a></li>
 			<li><a href="/sub2_4.html">PlugIn: highlight</a></li>
 			<li><a href="/sub2_5.html">PlugIn: Swiper</a></li>
