[FIx] page title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 	<div id="container">
 		<div class="aside_wrap"><aside id="aside">{% include aside.html %}</aside></div>
 		<div id="content">
-			<h2>{page.title}</h2>
+			<h2>{{page.title}}</h2>
 			{{ content }}
 	</div>
 	</div>
