[Fix] site title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>{{ page.title }} | Hyunjin study</title>
+<title>
+	{% if page.title == "index" %}
+      {{ site.tagline }}
+    {% else %}
+      {{ page.title }} | {{ site.title }}
+    {% endif %}
+</title>
 <link rel="stylesheet" href="/css/reset.css?ver=1.0" type="text/css">
 <link rel="stylesheet" href="/css/main.css?ver=1.0" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap">
