--- a/css/main.css
+++ b/css/main.css
@@ -24,8 +24,8 @@ body{overflow-y: scroll;}
 #content h3{margin: 24px 0 8px;padding-bottom: 8px;border-bottom: 1px solid #ddd;font-weight: 500;font-size: 2.2rem;}
 #content h4{padding-top: 18px; font-weight: 500; font-size: 1.8rem;}
 #content h3 + h4{padding: 0;}
-#content p, #content strong{font-weight: 400;font-size: 1.6rem;line-height: 2.8rem;word-break: keep-all;}
-#content strong{font-weight: 500;}
+#content p, #content strong, #content ul{font-weight: 400;font-size: 1.6rem;line-height: 2.8rem;}
+#content li::before{content:"";display: block;float: left;margin: 13px 8px;width: 2px;height: 2px;background-color: #000;}
 #content p a{position: relative;box-shadow: inset 0 -6px 0 rgba(68, 129, 235, 0.8); transition: all 0.3s ease;}
 #content p a:hover{box-shadow: inset 0 -24px 0 #4481eb;}
 #content p a:hover{color: #fff;}
@@ -56,4 +56,6 @@ body{overflow-y: scroll;}
     .aside_wrap{display: none; width: 100%;background-color: rgba(0,0,0,0.5);z-index: 30;}
     #aside.on{overflow-y: auto;display: block;position: absolute;top: 0;left: 0;margin-top: 0;width: 250px;font-size: 2rem;line-height: 3.2rem;background: #fff;z-index: 10;}
     #content{width: calc(100% - 64px);margin-left: 0;left: 0;}
+    #content li::before{margin: 11px 8px;}
+    #content p, #content strong, #content ul{word-break: break-all;}
 }
