--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ body{overflow-y: scroll;}
 #content h3{margin: 24px 0 8px;padding-bottom: 8px;border-bottom: 1px solid #ddd;font-weight: 500;font-size: 2.2rem;}
 #content h4{padding-top: 18px; font-weight: 500; font-size: 1.8rem;}
 #content h3 + h4{padding: 0;}
-#content p, #content strong, #content ul{font-weight: 400;font-size: 1.6rem;line-height: 2.8rem;}
+#content p, #content strong, #content ul, #content a{font-weight: 400;font-size: 1.6rem;line-height: 2.8rem;}
 #content li::before{content:"";display: block;float: left;margin: 13px 8px;width: 2px;height: 2px;background-color: #000;}
 #content a{position: relative;box-shadow: inset 0 -6px 0 #ddd; transition: all 0.3s ease;}
 #content a:hover{box-shadow: inset 0 -24px 0 #4481eb;}
