[Add] pre.Dos::before

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ body{overflow-y: scroll;}
 #content pre.javascript::before{content: "javascript"}
 #content pre.css::before{content: "css"}
 #content pre.shell::before{content: "git"}
+#content pre.DOS::before{content: "dos"}
 #content code{position: relative;padding: 16px;border-radius: 12px;font-family: "Noto Sans KR", sans-serif;font-weight: 400;font-size: 1.4rem;}
 #content code span.javascript, #content code span.hljs-tag, #content code span.hljs-function, #content code span.css, #content code span.hljs-params, #content code span.bash, #content code span.hljs-selector-class{color: #abb2bf;}
 
